force-app/main/default/objects/Provider__c/fields/Accepting_New_Patients__c.field-meta.xml
<CustomField>
    <fullName>Accepting_New_Patients__c</fullName>
    <label>Accepting New Patients</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>