force-app/main/default/objects/Provider__c/fields/Allows_Walk_Ins__c.field-meta.xml
<CustomField>
    <fullName>Allows_Walk_Ins__c</fullName>
    <label>Allows Walk-Ins</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>