force-app/main/default/objects/Provider__c/fields/Practice_Description__c.field-meta.xml
<CustomField>
    <fullName>Practice_Description__c</fullName>
    <label>Practice Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>