force-app/main/default/objects/Provider__c/fields/Practice_Type__c.field-meta.xml
<CustomField>
    <fullName>Practice_Type__c</fullName>
    <label>Practice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Hospital Inpatient/Outpatient</fullName>
            </value>
            <value>
                <fullName>Intermediate Care Facility</fullName>
            </value>
            <value>
                <fullName>Psychiatric Residential Treatment Facility</fullName>
            </value>
            <value>
                <fullName>Solo Practitioner</fullName>
            </value>
            <value>
                <fullName>Multi-Specialty</fullName>
            </value>
            <value>
                <fullName>Mental Healthy</fullName>
            </value>
            <value>
                <fullName>Physical Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>