force-app/main/default/objects/Provider__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Service Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Community Support</fullName>
            </value>
            <value>
                <fullName>Crisis Services</fullName>
            </value>
            <value>
                <fullName>Multi-Systemic Therapy</fullName>
            </value>
            <value>
                <fullName>Outpatient</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Prescriptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>